--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,20 @@
+2016-01-26
+==========
+* version 0.2.0
+* updates for Django 1.9
+* first tests
+
+
+2014-05-23
+==========
+* version 0.1.2
+
+
+2014-02-26
+==========
+* update to Django 1.6
+
+
 2011-10-07
 ==========
 * project start, code extracted from fiee-dorsale
